fix: Blurred code-snippets in some PCs in Chrome.

--- a/_assets/css/_styles.scss
+++ b/_assets/css/_styles.scss
@@ -3516,7 +3516,6 @@ pre {
     background-color: #fff;
     border: 1px solid #ececec;
     border-radius: 0;
-    -webkit-filter: blur(0.000001px);
     -webkit-transform: translateZ(0);
 
     &.preview,
